fixed main content text wrapping with sidebar

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,6 +21,7 @@
     }  
     #content{  
         margin:12px 0;  
+        width:70%;
         float:left;  
         font-family:Lucida Console;
         font-size:13px; 
@@ -78,8 +79,7 @@
         text-decoration:none;  
     }  
 
-    #title
-{
+    #title{
     display: block;
     border-top: 4px solid #a7a59b;
     height: 50px;
@@ -90,6 +90,6 @@
     font-family:Raleway;
     font-size:40px;  
     color: rgba(153, 153, 153, 1.0);
-}
-#title .name { float:left }
-#title .tel { float:right; font-size:15px; }
+    }
+    #title .name { float:left }
+    #title .tel { float:right; font-size:15px; }
